--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Confidence Vote</title>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H23MCHQQ25"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H23MCHQQ25');
+</script>
+
+
+
+
+
+
+    
   </head>
   <body class="bg-gray-50 text-gray-800">
     <div id="root"></div>
